--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
 
      </div>
 
+     <div class="col-lg-4 col-md-6 col-sm-12 div-1">
+        <div class="card">
+            <div class="imgbx">
+               <img src="image/shaheen.jpeg" alt="photo" srcset="">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Shaheen CM<br> <span>Student</span></h2>
+                    <div class="actionbtn">
+                        <button><a class="a-1" href="https://www.linkedin.com/mwlite/in/shaheen-mohd-3a0b36230">Linkedin</a> </button>
+                        <button><a class="a-2" href="https://shaheennrd.github.io/website./">Website</a> </button>
+  
+                    </div>
+  
+                </div>
+  
+            </div>
+  
+        </div>
+
+     </div>
+
 
      <div class="col-lg-4 col-md-6 col-sm-12 div-1">
         <div class="card">
@@ -586,7 +608,7 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Unknown<br> <span>Student</span></h2>
+                    <h2>Rashid<br> <span>Student</span></h2>
                     <div class="actionbtn">
                         <button><a class="a-1" href="">Linkedin</a> </button>
                         <button><a class="a-2" href="http://rashidpilakkal.github.io/website/">Website</a> </button>
