--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
      <div class="col-lg-4 col-md-6 col-sm-12 div-1">
         <div class="card">
             <div class="imgbx">
-               <img src="image/shahid.jpeg" alt="photo" srcset="">
+               <img src="image/sha.jpeg" alt="photo" srcset="">
             </div>
             <div class="content">
                 <div class="details">
