--- a/index.html
+++ b/index.html
@@ -629,14 +629,14 @@
      <div class="col-lg-4 col-md-6 col-sm-12 div-1">
         <div class="card">
             <div class="imgbx">
-               <img src="image/img1.jpg" alt="photo" srcset="">
+               <img src="image/athif.jpeg" alt="photo" srcset="">
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Unknown<br> <span>Student</span></h2>
+                    <h2>athif<br> <span>Student</span></h2>
                     <div class="actionbtn">
-                        <button><a class="a-1" href="">Linkedin</a> </button>
-                        <button><a class="a-2" href="">Website</a> </button>
+                        <button><a class="a-1" href="https://www.linkedin.com/in/athif-moothedan-851b891b9">Linkedin</a> </button>
+                        <button><a class="a-2" href="https://ab11athif.github.io/portfolio/">Website</a> </button>
   
                     </div>
   
