--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>athif<br> <span>Student</span></h2>
+                    <h2>Athif<br> <span>Student</span></h2>
                     <div class="actionbtn">
                         <button><a class="a-1" href="https://www.linkedin.com/in/athif-moothedan-851b891b9">Linkedin</a> </button>
                         <button><a class="a-2" href="https://ab11athif.github.io/portfolio/">Website</a> </button>
@@ -647,6 +647,30 @@
         </div>
 
      </div>
+
+
+     <div class="col-lg-4 col-md-6 col-sm-12 div-1">
+        <div class="card">
+            <div class="imgbx">
+               <img src="image/afnan.jpeg" alt="photo" srcset="">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Afnan<br> <span>Student</span></h2>
+                    <div class="actionbtn">
+                        <button><a class="a-1" href="https://www.linkedin.com/in/afnan-mk-9739a8227">Linkedin</a> </button>
+                        <button><a class="a-2" href="https://afnanmk123.github.io/afnan-mk/">Website</a> </button>
+  
+                    </div>
+  
+                </div>
+  
+            </div>
+  
+        </div>
+
+     </div>
+
 
      
 
