--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
                 <div class="details">
                     <h2>Muhammed Shahil<br> <span>Student</span></h2>
                     <div class="actionbtn">
-                        <button><a class="a-1" href="">Linkedin</a> </button>
-                        <button><a class="a-2" href="">Website</a> </button>
+                        <button><a class="a-1" href="https://www.linkedin.com/in/muhammed-shahil-a-k-a46487227">Linkedin</a> </button>
+                        <button><a class="a-2" href="https://mdshahilak.github.io/p1/Intex.html">Website</a> </button>
   
                     </div>
   
